# My-MiniMind

./: .gitignore  README.md  eval_llm.py  pyproject.toml
dataset/: .msc  lm_dataset.py  lora_identity.jsonl
model/: Model.py
trainer/: test.py  trainer_dpo.py  trainer_full_sft.py  trainer_grpo.py  trainer_lora.py  trainer_ppo.py  trainer_pretrain.py  trainer_reason.py  trainer_utils.py
