[project]
name = "my-minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "modelscope>=1.34.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "swanlab>=0.7.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
